# outlier-detection-tool

./: .gitignore  LICENSE  README.md  data.csv  detect_outliers.py  pyproject.toml  test_detect_outliers.py
.github/workflows/: ci.yml
data/: data.csv  test2.csv  test3.csv  test4.csv  test5.csv
docs/: README.md
requirements/: requirements.txt
src/: data_analysis.py  detect_outliers.py  normalize_columns  util_outlier_detection
src/outlier_detection_tool/: __init__.py  cli.py  detect_outliers.py
tests/: test_detect_outliers.py
util/: util_outlier_detection.py
