[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "outlier-detection-tool"
version = "0.1.0"
description = "Detect outliers in (x,y) datasets using Cook's distance."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Yisong Chen" }]
keywords = ["outliers", "cooks-distance", "regression", "anomaly-detection"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
  "pandas>=1.5",
  "numpy>=1.23",
  "statsmodels>=0.14",
]

[project.optional-dependencies]
dev = [
  "pytest>=7",
]

[project.scripts]
outlier-detect = "outlier_detection_tool.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
